showcase and content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +10,9 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Hotel BT | Welcome</title>
 </head>
+
 <body>
-    
+
     <header>
         <nav id="navbar">
             <div class="container">
@@ -26,11 +28,26 @@
             <div class="container">
                 <div class="showcase-content">
                     <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum dolores dolore saepe numquam modi qui!</p>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum dolores dolore
+                        saepe numquam modi qui!</p>
                     <a class="btn" href="about.html">About Our Hotel</a>
                 </div>
             </div>
         </div>
     </header>
+
+    <section id="home-info" class="bg-dark">
+        <div class="info-img"></div>
+            <div class="info-content">
+                <h2><span class="text-primary">The
+                        History</span> Of Our Hotel</h2>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id quod vel magni architecto. Iste, nobis
+                    velit! Necessitatibus facilis illo animi saepe? Praesentium maiores temporibus id neque ratione fuga
+                    quia soluta amet omnis, facilis iusto cumque nulla dignissimos dolorum aspernatur voluptatem!
+                </p>
+                <a href="about.html" class="btn btn-light">Read More</a>
+            </div>   
+    </section>
 </body>
 </html>
