--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="hotel,boston hotel,new england hotel">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px" href="css/mobile.css">
     <title>Hotel BT | Welcome</title>
 </head>
 
@@ -19,7 +20,8 @@
             <div class="container">
                 <h1 class="logo"><a href="index.html">HBT</a></h1>
                 <ul>
-                    <li><a class="current" href="index.html">Home</a></li>
+                    <li><a class="current" 
+                        href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
